商品カテゴリーをもっと見るボタンの実装

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,22 +26,15 @@
       </span>
     </div>
 
-    <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
-
   <% if user_signed_in? %>
     <% if current_user.id == @item.user_id %>
-      <%# ログイン中かつ出品者の場合：編集と削除を表示 %>
       <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
       <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
     <% else %>
-      <%# ログイン中かつ出品者以外の場合：購入画面ボタンを表示（売れていない場合） %>
       <%= link_to "購入画面に進む", "#", class: "item-red-btn" %>
     <% end %>
   <% end %>
-
-
-    <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
 
     <div class="item-explain-box">
       <span><%= @item.info %></span>
@@ -109,9 +102,7 @@
       後ろの商品 ＞
     </a>
   </div>
-  <%# 詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
-  <a href="#" class="another-item"><%= "商品のカテゴリー名" %>をもっと見る</a>
-  <%# //詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
+  <%= link_to "#{@item.category.name}をもっと見る", root_path, class: "another-item" %>
 </div>
 
 <%= render "shared/footer" %>
