--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,14 +8,12 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image, class: "item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# 購入機能実装後に @item.sold? などの条件に変更します %>
-      <% if false %>
+      
+      <% if @item.order.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
       <% end %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -26,7 +24,7 @@
       </span>
     </div>
 
-  <% if user_signed_in? %>
+  <% if user_signed_in? && @item.order.nil? %>
     <% if current_user.id == @item.user_id %>
       <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
