--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
     <% if user_signed_in? %>
       <%# ログインしている時の表示 %>
       <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
-      <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "logout" %></li>
+      <li><%= link_to 'ログアウト', destroy_user_session_path, class: "logout" %></li>
     <% else %>
       <%# ログインしていない時の表示 %>
       <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
